[package]
name = "edulingo"
version = "0.1.0"
authors = ["Anthony <anthony@hevia.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.105"
ansi_term = "0.12.1"